feat(project): updates to revision 196.1 (#260)
* feat(deobfuscator): adds client version task

* feat(rs-client): updates revision to 196.1

* feat(rs-client): fixes api issues

* minimap: add clan chat dot color configuration

* ui: queue repaint when progressbar is edited

* discord plugin: sanity check user id and avatar id before building url

* party service: sanitize user names

* info panel: adjust nav button priority

* party: add party panel

* party: only send location update when the location changes

* party: readd overlay leave party menu entry

* twitch: change chat trigger to /t

// was taken by clan chat with the recent update

* chat history: support clan chat

Additionally fix the TAB_PRIVATE widget mapping which is incorrect with the
latest update. The old friends chat tab has also gained a Clear history
option so we no longer need to add it.

* chat history: rebuild pmbox when all is cleared

Additionally it is unnecessary to manually remove messages when the clear option is vanilla, since it will do it already

* api: add getOnVarTransmitListener to Widget

* feat(rs-api): adds var transmit listener getter

* friendschat: readd user count

Also readd the Recent FCs title

* api: add enum size

* feat(rs-api): adds enum composition size

* api: correct clans chattypes

* devtools: add modicons command

* feat(client): updates dev tools extended plugin

* friendchatmanager: rename to chaticonmanager

FriendsChatManager predates the api having an ability to look up clan
members by name, without doing string matching, hence the caching. This
is no longer necessary as we can do efficient lookups of players by name
now.

Also remove the old isMember utility function which is just duplicated
from the friends chat manager.

* Change config name of party plugin to disable by default

Since the plugin was rewritten and changed to disable by default, it will not retroactively apply to exist